--- a/kemexon_formula_pricing/views/sale_order_view.xml
+++ b/kemexon_formula_pricing/views/sale_order_view.xml
@@ -8,6 +8,8 @@
                 <xpath expr="//field[@name='incoterm_location']"
                        position="after">
                     <field name="show_formula_pricing"/>
+                    <field name="show_validity"/>
+                    <field name="valid_until"/>
                 </xpath>
                 <xpath expr="//tree//field[@name='price_unit']"
                        position="before">
