--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -92,6 +92,7 @@
                 </t>
                 <t t-if="o.show_vat_ids">
                     <br/>
+
                     VAT ID:&#160;&#160;<span t-field="o.partner_id.vat"/>
                 </t>
                 <br/>
@@ -712,7 +713,15 @@
                 <!--                </strong>-->
                 <ul class="list-inline mb4">
                     <li t-if="company.name">
-                        <span class="o_force_ltr" t-field="company.name"/>
+                        <t t-if="o.legal_entity">
+                            <span class="o_force_ltr" t-field="company.name"/>
+                            <span class="o_force_ltr"> c/o </span>
+                            <span class="o_force_ltr" t-field="o.legal_entity.name"/>
+                        </t>
+                        <t t-else="">
+                            <span class="o_force_ltr" t-field="company.name"/>
+                        </t>
+
                     </li>
                     <li t-if="company.street">
                         <span class="o_force_ltr" t-field="company.street"/>
@@ -722,11 +731,16 @@
                         -
                         <span t-field="company.email"/>
                         <t t-if="o.show_vat_ids">
-                            <t t-if="company.vat">
+                             <t t-if="o.legal_entity">
+                                &#160;-&#160;<t t-out="company.country_id.vat_label or 'VAT ID'"/>:
+                                <span t-field="o.legal_entity.vat_id"/>
+                            </t>
+                             <t t-else="">
                                 &#160;-&#160;<t t-out="company.country_id.vat_label or 'VAT ID'"/>:
                                 <span t-field="company.vat"/>
                             </t>
                         </t>
+
                     </li>
                     <!--                                    <li t-if="company.website" >-->
                     <!--                                        <span t-field="company.website"/>-->
