--- a/kemexon_formula_pricing/reports/pro-forma_invoice_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/pro-forma_invoice_template_inherited.xml
@@ -447,13 +447,30 @@
                 <div style="border-top: 2px solid black;"/>
                 <br/>
                 <!--                <span class="m-0" t-field="o.narration"/>-->
-                <ul>
-                    <li>Kemexon follows a detailed process as per the company policy for informing any change in
-                        bank account/ remittance process. We request you to not rely on any isolated email communication
-                        informing the change of bank account etc. If you do so, the same shall be at your risk and
-                        consequences.
-                    </li>
-                    <li>Kemexon terms and conditions apply.</li>
+                <ul style="font-size:18px;">
+                    <t t-if="doc.legal_entity">
+                        <li>Kemexon follows a detailed process as per the company policy for informing any change
+                            in
+                            bank account/ remittance process. We request you to not rely on any isolated email
+                            communication
+                            informing the change of bank account etc. If you do so, the same shall be at your risk and
+                            consequences.
+                        </li>
+                        <li>Fiscal representation of KEMEXON SA in France: RM BOULANGER SA (17A rue du
+                            Vertuquet, 59960 Neuville-en-Ferrain, no SIREN: 321252827)
+                        </li>
+                        <li>Kemexon terms and conditions apply.</li>
+                    </t>
+                    <t t-else="">
+                        <li>Kemexon follows a detailed process as per the company policy for informing any change
+                            in
+                            bank account/ remittance process. We request you to not rely on any isolated email
+                            communication
+                            informing the change of bank account etc. If you do so, the same shall be at your risk and
+                            consequences.
+                        </li>
+                        <li>Kemexon terms and conditions apply.</li>
+                    </t>
                 </ul>
                 <br/>
                 <!--                <center>-->
