--- a/kemexon_formula_pricing/views/sale_order_view.xml
+++ b/kemexon_formula_pricing/views/sale_order_view.xml
@@ -8,6 +8,7 @@
                 <xpath expr="//field[@name='incoterm_location']"
                        position="after">
                     <field name="show_formula_pricing"/>
+                    <field name="en_plus"/>
                     <field name="show_validity"/>
                     <field name="valid_until"/>
                 </xpath>
