--- a/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/invoice_report_template_inherited.xml
@@ -92,8 +92,9 @@
                 </t>
                 <t t-if="o.show_vat_ids">
                     <br/>
-
-                    VAT ID:&#160;&#160;<span t-field="o.partner_id.vat"/>
+                    <t t-if="o.partner_id.vat">
+                        VAT ID:&#160;&#160;<span t-field="o.partner_id.vat"/>
+                    </t>
                 </t>
                 <br/>
                 <br/>
