--- a/kemexon_formula_pricing/reports/pro-forma_invoice_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/pro-forma_invoice_template_inherited.xml
@@ -69,6 +69,12 @@
                     <br/>
                     <span t-field="doc.partner_id.state_id.name"/>
                 </t>
+                <t t-if="o.show_vat_ids">
+                    <br/>
+                    <t t-if="o.partner_id.vat">
+                        VAT ID:&#160;&#160;<span t-field="o.partner_id.vat"/>
+                    </t>
+                </t>
                 <br/>
                 <br/>
                 <br/>
