--- a/kemexon_financial_instruments/views/lc_lines_views.xml
+++ b/kemexon_financial_instruments/views/lc_lines_views.xml
@@ -35,4 +35,21 @@
             </form>
         </field>
     </record>
+    <record id="action_lc_lines" model="ir.actions.act_window">
+        <field name="name">Financial Instrument Lines</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">lc.lines</field>
+        <field name="view_mode">tree</field>
+        <field name="context">{}</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Create your Financial Instrument Lines!
+            </p>
+        </field>
+    </record>
+    <menuitem id="menu_lc_Lines"
+              name="Financial Instruments Lines"
+              action="action_lc_lines"
+              parent="account.menu_finance_receivables"
+              sequence="6"/>
 </odoo>
