--- a/kemexon_formula_pricing/views/purchase_order_view.xml
+++ b/kemexon_formula_pricing/views/purchase_order_view.xml
@@ -1,11 +1,11 @@
 <odoo>
     <data>
-        <record id="view_account_move_form_inherit" model="ir.ui.view">
-            <field name="name">account.move.form</field>
-            <field name="model">account.move</field>
-            <field name="inherit_id" ref="account.view_move_form"/>
+        <record id="view_purchase_order_form_inherit" model="ir.ui.view">
+            <field name="name">purchase.order.form</field>
+            <field name="model">purchase.order</field>
+            <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='invoice_incoterm_id']"
+                <xpath expr="//field[@name='payment_term_id']"
                        position="after">
                     <field name="show_formula_pricing"/>
                 </xpath>
