--- a/line_items_tree_views/views/line_items_tree_views.xml
+++ b/line_items_tree_views/views/line_items_tree_views.xml
@@ -4,7 +4,7 @@
             <field name="name">Purchase Order Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">purchase.order.line</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph</field>
             <field name="context">{}</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -16,7 +16,7 @@
             <field name="name">Sale Order Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">sale.order.line</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph</field>
             <field name="context">{}</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -28,7 +28,7 @@
             <field name="name">Sale Invoice Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">account.move.line</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph</field>
             <field name="context">{}</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -41,7 +41,7 @@
             <field name="name">Purchase Invoice Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">account.move.line</field>
-            <field name="view_mode">tree</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph</field>
             <field name="context">{}</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -66,7 +66,7 @@
             <field name="name">Blanket Order Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">purchase.requisition.line</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph</field>
             <field name="context">{}</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
@@ -78,7 +78,7 @@
             <field name="name">Blanket Order Lines</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">orderline.orderline</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,kanban,form,pivot,graph</field>
             <field name="context">{}</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
