--- a/kemexon_formula_pricing/reports/pro-forma_invoice_template_inherited.xml
+++ b/kemexon_formula_pricing/reports/pro-forma_invoice_template_inherited.xml
@@ -299,13 +299,13 @@
                     </t>
                 </t>
                 <div class="row">
-                    <div class="col-2" t-if="doc.delivery_location">
+                    <div class="col-2" t-if="doc.incoterm_location_custom">
                         <strong>Delivery Location</strong>
                     </div>
                     <br/>
                     <div class="col-4" style="padding-left: 37px;">
-                        <t t-if="doc.delivery_location">
-                            <span class="m-0" t-field="doc.delivery_location"/>
+                        <t t-if="doc.incoterm_location_custom">
+                            <span class="m-0" t-field="doc.incoterm_location_custom"/>
                         </t>
                     </div>
                 </div>
